--- a/index.html
+++ b/index.html
@@ -6,65 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
-
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
-
-
-
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
-
-
-
-
-
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
-
-
-
-
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
-
-
-
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
-
-
-    <p>tumi ami ami tumi </p>
-    <h1>hello bangladesh </h1>
-    <h2>Hello Bangladesh </h2>
-    <h3>Hello Bangladesh</h3>
-    <h4>Hello Bangladesh</h4>
-    <h5>Hello Bangladesh</h5>
+    <script src="recap.js"></script>
 </body>
 </html>
