--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <script src="recap.js"></script>
     <script src="Es6.js"></script>
+    <script src="mafkoreden.js"></script>
+    <script src="filter.js"></script>
 </body>
 </html>
