--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script src="Es6.js"></script>
     <script src="mafkoreden.js"></script>
     <script src="filter.js"></script>
+    <script src="reduse.js"></script>
+    <script src="products.js"></script>
 </body>
 </html>
