--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="filter.js"></script>
     <script src="reduse.js"></script>
     <script src="products.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
