--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="reduse.js"></script>
     <script src="products.js"></script>
     <script src="calculator.js"></script>
+    <script src="variable/argument.js"></script>
 </body>
 </html>
