--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="products.js"></script>
     <script src="calculator.js"></script>
     <script src="variable/argument.js"></script>
+    <script src="variable/json.js"></script>
 </body>
 </html>
