--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="loadData()">load data</button>
+    <button onclick="loaduser()">loadUser</button>
+    <script src="jasonindex.js"></script>
     <script src="recap.js"></script>
     <script src="Es6.js"></script>
     <script src="mafkoreden.js"></script>
@@ -15,5 +18,6 @@
     <script src="calculator.js"></script>
     <script src="variable/argument.js"></script>
     <script src="variable/json.js"></script>
+    <script src="jsonplaseholder.js"></script>
 </body>
 </html>
