--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <script src="variable/argument.js"></script>
     <script src="variable/json.js"></script>
     <script src="jsonplaseholder.js"></script>
+    <script src="variable/interval.js"></script>
 </body>
 </html>
