--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <script src="variable/json.js"></script>
     <script src="jsonplaseholder.js"></script>
     <script src="variable/interval.js"></script>
+    <script src="variable/evenloop.js"></script>
 </body>
 </html>
